<resources>
    <string name="app_name">ISTHARA</string>

    <string name="sendotp_key">210085AFhE6S0W5ad2fefe</string>
    <string name="enterphonenumber">Mobile no.</string>
    <string name="sending_sms">We\'re sending an sms to</string>
    <string name="inprogress">Verification in progress</string>
    <string name="verified">Verification successful</string>
    <string name="failed">Verification failed</string>
    <string name="entercode">Please enter the code you received</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="prompt_mobile">Mobile No.</string>
    <string name="prompt_room">Password</string>

    <string name="action_log_in">LogIn</string>
    <string name="action_sign_in_short">LogIn</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_help_desk_list">HelpDesk</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_payment">Payment</string>
</resources>
