<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="0dip"
    tools:context=".Activities.Login.Activity.OTPVerificationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-180dp"
        android:src="@drawable/login_bg" />


    <LinearLayout
        android:id="@+id/textWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/sending_sms"
            android:textColor="@color/sendotp_grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/numberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:text="+46123456789"
            android:textAllCaps="true"
            android:textColor="@color/sendotp_grey"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/inputContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/entercode"
                    android:textColor="@color/sendotp_grey"
                    android:textSize="16dp" />

                <!--<EditText
                    android:id="@+id/inputCode"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:inputType="number"/>-->

                <EditText
                    android:id="@+id/inputCode"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@color/sendotp_grey"
                    android:textSize="20dp" />


                <Button
                    android:id="@+id/codeInputButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/inputbox"
                    android:minHeight="56dp"
                    android:onClick="onSubmitClicked"
                    android:text="VERIFY"
                    android:textAllCaps="true"
                    android:textColor="@color/sendotp_grey"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/resend_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Resend via call ()"
                    android:textColor="@color/sendotp_grey"
                    android:textSize="16sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressIndicator"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:indeterminateDrawable="@drawable/progress"
                android:indeterminateDuration="3000"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/checkmarkImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_check_circle_black"
                android:visibility="invisible" />
        </RelativeLayout>


        <TextView
            android:id="@+id/progressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:text="@string/inprogress"
            android:textAllCaps="true"
            android:textColor="@color/sendotp_grey"
            android:textSize="16dp" />

    </LinearLayout>

</RelativeLayout>
